# hearthledger

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  justfile  mprocs.yaml
backend/: Cargo.toml
backend/migrations/: 20260528000100_create_inventory.sql  20260528000200_seed_inventory.sql  20260528000300_add_quantity_type_and_float_quantity.sql  20260528000425_add_user_role.sql  20260528000450_seed_test_users.sql  20260528000500_create_bundles.sql  20260528000510_autoincrement_user_ids.sql  20260601000100_reset_production_data.sql
backend/src/: app_state.rs  bundle.rs  db.rs  item.rs  lib.rs  main.rs  routes.rs  user.rs
backend/src/routes/: bundle.rs  bundles.rs  inventory.rs  test_support.rs  users.rs
design/: SPEC.md
docker/: entrypoint.sh
frontend/: README.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: mock-backend.mjs
frontend/src/: app.html
frontend/src/lib/: EditableInventoryList.svelte  EditableInventoryList.svelte.spec.ts  InventoryList.svelte  InventoryList.svelte.spec.ts  Login.svelte  Logout.svelte  Navbar.svelte  PendingBundlesIcon.svelte  PendingBundlesTree.svelte  PendingBundlesTree.svelte.spec.ts  UserAdmin.svelte  auth.ts  bundles.ts  inventory.ts  users.ts
frontend/src/lib/server/: db.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  app.e2e.ts  layout.css  page.server.spec.ts
frontend/src/routes/bundles/: +page.svelte  bundles.e2e.ts
frontend/src/routes/inventory/: +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  (+1 more)
(+5 files in other folders)
